<resources>
    <string name="app_name">汇迪</string>

    <!-- common -->
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="choose_time">选择时间</string>
    <string name="loading">加载中</string>
    <string name="request_timeout">请求超时</string>
    <string name="request_fail">请求失败</string>
    <string name="network_unavailable">网络不可用,确保wifi或者移动网络是否已经打开</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="submit">提交</string>
    <string name="please_input">请输入</string>
    <string name="already_input">已输入</string>
    <string name="can_not_empty">输入不能为空</string>
    <string name="submit_success">提交成功</string>
    <string name="tips">温馨提示</string>
    <string name="confirm_to_submit">您确认内容无误且确认提交吗？</string>

    <!-- 引导页 -->
    <string name="guide_page">引导页</string>
    <string name="experience_immediately">立即体验</string>

    <!-- 登录 -->
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="auth_code">验证码</string>
    <string name="aquire_auth_code">获取验证码</string>
    <string name="error_auth_code">验证码错误</string>
    <string name="reset_password">重设密码</string>
    <string name="please_input_account">请输入账号</string>
    <string name="input_password">请输入密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="home_page">首页</string>
    <string name="people_name">人名</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_corrent_phone">手机号码不存在</string>

    <!-- 忘记密码 -->
    <string name="auto_login">自动登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="input_captcha">请输入验证码</string>
    <string name="acquire_again">重新获取</string>
    <string name="after_second_acquire_again">%d秒后重新获取</string>
    <string name="input_corrent_password">密码的字符数应该是6-16位</string>
    <string name="change_password_success">修改密码成功</string>

    <!-- 公告 -->
    <string name="bulletin_list">公告列表</string>
    <string name="detail">详细</string>

    <!-- 数据汇报 -->
    <string name="data_report">数据汇报</string>
    <string name="project_status">项目情况</string>
    <string name="project_with_colon">项目:</string>
    <string name="data_with_colon">日期:</string>
    <string name="sale_product_with_colon">销售产品:</string>
    <string name="boiler">锅炉</string>
    <string name="boiler_index">锅炉%s</string>
    <string name="expense">费用</string>
    <string name="project_expense_with_colon">项目日费用:</string>
    <string name="expense_details_with_colon">费用明细:</string>
    <string name="other_problem">其他问题</string>
    <string name="input_other_problem">可输入其他问题</string>
    <string name="next_step">下一步</string>
    <string name="with_hour_unit">%dh</string>
    <string name="params_not_full_prompt">项目参数不完整，不能提交</string>
    <string name="fill_project_info">请填写项目情况</string>
    <string name="fill_boiler_info">请填写锅炉信息</string>
    <string name="flow_amount_not_zero">总流量不能为零</string>
    <string name="edit_mode_choose_different_report_time">不能选择已提交过的日期</string>

    <!-- 锅炉编辑1 -->
    <string name="blow_in_duration">开炉时长</string>
    <string name="blow_in_duration_with_colon">开炉时长:</string>
    <string name="please_choose_duration">请选择时长</string>
    <string name="flow">流量</string>
    <string name="flow_index">流量%d:</string>
    <string name="initial_flow_index">起始流量%d:</string>
    <string name="close_flow_index">截止流量%d:</string>
    <string name="close_flow_must_bigger_than_initial_flow">截止流量必须大于起始流量</string>
    <string name="flow_adjustment">流量调整</string>
    <string name="adjustment_description">调整说明</string>
    <string name="electric_quantity">电量</string>
    <string name="electric_quantity_with_colon">电量:</string>
    <string name="electric_quantity_one_with_colon">电量1:</string>
    <string name="electric_quantity_two_with_colon">电量2:</string>
    <string name="electric_quantity_three_with_colon">电量3:</string>
    <string name="electric_unit_consumption">电单耗</string>
    <string name="water_quantity">水量</string>
    <string name="heating_power">热力</string>
    <string name="water_quantity_with_colon">水量:</string>
    <string name="water_quantity_two_with_colon">水量2:</string>
    <string name="water_quantity_three_with_colon">水量3:</string>
    <string name="water_unit_consumption">水单耗</string>
    <string name="water_unit_consumption_with_colon">水单耗</string>
    <string name="fill_flow_info">请填写流量信息</string>
    <string name="fill_electric_info">请填写电量信息</string>
    <string name="fill_water_info">请填写水量信息</string>
    <string name="fill_cost_info">请填写费用信息</string>
    <string name="input_positive_negative_number">可输入正负数</string>

    <!-- 锅炉编辑2 -->
    <string name="fuel">燃料</string>
    <string name="fuel_type_with_colon">燃料种类:</string>
    <string name="last_period_stock_with_colon">上期库存:</string>
    <string name="feedstock_amount_with_colon">进料量:</string>
    <string name="feedstock_amount">进料量:</string>
    <string name="supplier">供应商:</string>
    <string name="license_plate">车牌号:</string>
    <string name="conlon">:</string>
    <string name="delivery_capacity">送货量:</string>
    <string name="current_period_stock_with_colon">本期库存:</string>
    <string name="fuel_consumption_with_colon">燃料耗量:</string>
    <string name="fuel_adjust_with_colon">燃料调整:</string>
    <string name="adjust_explain_with_colon">调整说明:</string>
    <string name="fuel_unit_consumption_with_colon">燃料单耗:</string>
    <string name="choose_fuel_category_first">请先选择燃料种类</string>
    <string name="fill_fuel_info">请填写燃料信息</string>
    <string name="fill_feedstock_info">请填写进料量信息</string>
    <string name="not_same_supplier">该供应商已被其他进料量使用</string>

    <!-- 考勤汇报 -->
    <string name="attendance_report">考勤汇报</string>
    <string name="department_with_colon">部门:</string>
    <string name="name_with_colon">姓名:</string>
    <string name="man_hours_check">工时考勤</string>
    <string name="man_hours">工时:</string>
    <string name="working_status_with_colon">上班状态:</string>
    <string name="start_work_time">上班时间:</string>
    <string name="end_work_time">下班时间:</string>
    <string name="stat_work_time_must_before_end_time">上班时间不能迟于下班时间</string>
    <string name="end_work_time_must_after_start_time">下班时间不能早于上班时间</string>
    <string name="overtime">加班</string>
    <string name="overtime_duration">加班时间:</string>
    <string name="overtime_reason">加班事由:</string>
    <string name="category">类别</string>
    <string name="category_with_colon">类别:</string>
    <string name="work_detail_with_colon">工作内容:</string>
    <string name="business_trip">出差</string>
    <string name="business_trip_location">出差地点:</string>
    <string name="transportation_fare">交通费:</string>
    <string name="transportation_time_consuming">交通耗时:</string>
    <string name="accommodation_fee">住宿费:</string>
    <string name="rate">打分</string>
    <string name="rate_with_colon">打分:</string>
    <string name="last_day_fill">请每月的最后一个工作日填入</string>
    <string name="fill_base_info">请填写基本信息</string>
    <string name="fill_man_hours_check_info">请填写工时考勤信息</string>
    <string name="fill_category_info">请填写类别信息</string>

    <!-- 项目启停 -->
    <string name="project_start_stop">项目启停</string>
    <string name="normal">正常</string>
    <string name="maintain">维修</string>
    <string name="shutdown">停炉</string>

    <!-- 项目编辑 -->
    <string name="status_with_colon">状态:</string>
    <string name="start_time_with_colon">开始时间:</string>
    <string name="fill_start_time">请选择开始时间</string>
    <string name="end_time_with_colon">结束时间:</string>
    <string name="fill_end_time">请选择结束时间</string>
    <string name="reason_with_colon">原因:</string>

    <!-- 合理化建议 -->
    <string name="reasonable_advice">合理化建议</string>
    <string name="reasonable_advice_tips">合理化的建议有助于我们改善用户体验,谢谢</string>

    <!--个人中心-->
    <string name="basic_information">基本信息</string>
    <string name="people_infomation">个人信息</string>
    <string name="name">姓名</string>
    <string name="phone_num">手机号码</string>
    <string name="belongs_department">所在部门</string>
    <string name="engineering_department">工程部</string>
    <string name="common_option">常用选项</string>
    <string name="common_project">常用项目</string>
    <string name="common_contact">常用联系人</string>
    <string name="hostorical_data_statistic">历史数据统计</string>
    <string name="setting">设置</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="contacts_amount">联系人数</string>
    <string name="change_password">修改密码</string>
    <string name="resonable_suggest">合理建议</string>
    <string name="prompt">提示</string>
    <string name="input_new_project">请输入新项目名称</string>
    <string name="comfirm">确定</string>

    <!--历史数据统计-->
    <string name="yongxing">永新</string>
    <string name="standard_form">标单:</string>
    <string name="individual_consumepotion">单耗:</string>
    <string name="electricity_unit_consumption">电单耗:</string>
    <string name="waters_untit_consumption">水单耗:</string>
    <string name="profit">利润:</string>
    <string name="question">问题:</string>
    <string name="report_people">汇报人:</string>
    <string name="boiler_a">锅炉A:</string>
    <string name="boiler_b">锅炉B:</string>
    <string name="project_date_expanse">项目日费用:</string>
    <string name="expanse_detail">费用明细</string>
    <string name="date_details">数据详情</string>
    <string name="open_boiler_time">开炉时长:</string>
    <string name="start_flow_one">起始流量1:</string>
    <string name="stop_flow_one">截止流量1:</string>
    <string name="flow_one">流量1:</string>
    <string name="adjustment_explain">调整说明:</string>
    <string name="data_list">数据列表</string>
    <string name="project_no_empt">项目名不能为空</string>
    <string name="project_amount">项目数</string>
    <string name="maintain_cost">维修费用</string>
    <string name="please_check">请查看</string>
    <string name="kg_unit">kg</string>
    <string name="steam">蒸汽</string>

    <!-- 单位 -->
    <string name="kg_per_ton">%.04fkg/吨</string>
    <string name="kg_per_ton_steam">%.04fkg/吨</string>
    <string name="kw_per_ton">%.04fkw/h/吨</string>
    <string name="kw_per_ton_steam">%.04fkw/h/吨</string>
    <string name="ton_per_ton">%.04f吨/吨</string>
    <string name="ton_per_ton_steam">%.04f吨/吨</string>
    <string name="yuan">元</string>
    <string name="ton">吨</string>
    <string name="how_many_ton">%.04f吨</string>
    <string name="zen_ton">/吨</string>
    <string name="how_many_steam_ton">%.04f吨</string>
    <string name="electric_unit">kw/h</string>

    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="hours">小时</string>
    <string name="minute">分</string>

    <!-- 历史考勤统计 -->
    <string name="hostorical_attendance_statics">历史考勤统计</string>
    <string name="year_month">%1$d年%2$d月</string>

    <!-- 员工考勤统计 -->
    <string name="employee_attendance_statics">员工考勤统计</string>

    <!-- 员工考勤详情 -->
    <string name="employee_attendance_detail">员工考勤详情</string>

    <!--设置-->
    <string name="feedback">意见反馈</string>
    <string name="input_something">请填写内容</string>
    <string name="check_update">检查更新</string>
    <string name="using_help">使用帮助</string>
    <string name="version_num">当前版本:2.1.0</string>
    <string name="exit_login">退出登录</string>
    <string name="new_version">新版特性:</string>
    <string name="update">更新</string>
    <string name="newest_version">已经是最新版本</string>
    <string name="newest_version_code">最新版本是 V%s</string>
    <string name="none">无</string>
    <string name="reasonable_suggest_text">合理的建议有助于我们改善用户体验，谢谢</string>
    <string name="system_download_service">系统下载服务不可用,请您启用</string>
    <string name="start_download_apk">正在下载apk</string>

</resources>
