<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <View
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <requestFocus />
            </View>

            <TextView
                style="@style/SingleTitleLayoutStyle"
                android:text="@string/project_status" />

            <RelativeLayout
                style="@style/WhiteFixHeightLayoutStyle"
                android:onClick="selectProjectAction">

                <TextView
                    style="@style/DimTextStyle"
                    android:text="@string/project_with_colon" />

                <TextView
                    android:id="@+id/tvProject"
                    style="@style/WithArrowIconTextStyle"
                    tools:text="用新" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rltData"
                style="@style/WhiteFixHeightLayoutStyle"
                android:layout_marginTop="@dimen/margin_1"
                android:onClick="selectDateAction">

                <TextView
                    style="@style/DimTextStyle"
                    android:text="@string/data_with_colon" />

                <TextView
                    android:id="@+id/tvDate"
                    style="@style/WithArrowIconTextStyle"
                    tools:text="2016-04-11" />
            </RelativeLayout>

            <RelativeLayout
                style="@style/WhiteFixHeightLayoutStyle"
                android:layout_marginTop="@dimen/margin_1">

                <TextView
                    style="@style/DimTextStyle"
                    android:text="@string/sale_product_with_colon" />

                <TextView
                    android:id="@+id/tvSaleProduct"
                    style="@style/WithArrowIconTextStyle"
                    tools:text="蒸汽" />

            </RelativeLayout>

            <TextView
                style="@style/SingleTitleLayoutStyle"
                android:text="@string/boiler" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/SingleTitleLayoutStyle"
                android:text="@string/expense" />

            <RelativeLayout style="@style/WhiteFixHeightLayoutStyle">

                <TextView
                    style="@style/DimTextStyle"
                    android:text="@string/project_expense_with_colon" />

                <com.mdground.hdenergy.views.EdittextWithUnitIcon
                    android:id="@+id/etuiProjectExpense"
                    style="@style/WithArrowEdittextStyle"
                    app:unitResId="@string/yuan" />

            </RelativeLayout>

            <RelativeLayout
                style="@style/WhiteFixHeightLayoutStyle"
                android:layout_marginTop="@dimen/margin_1">

                <TextView
                    style="@style/DimTextStyle"
                    android:text="@string/expense_details_with_colon" />

                <EditText
                    android:id="@+id/etProjectDetail"
                    style="@style/WithArrowEdittextStyle" />

            </RelativeLayout>

            <TextView
                style="@style/SingleTitleLayoutStyle"
                android:text="@string/other_problem" />

            <EditText
                android:id="@+id/etOtherProblem"
                style="@style/LargeEdittextLayoutStyle"
                android:hint="@string/input_other_problem" />

            <Button
                android:id="@+id/btnNextStep"
                style="@style/NormalButtonStyle"
                android:onClick="submitAction"
                android:text="@string/submit"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>
    </ScrollView>
</layout>