<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/SingleTitleLayoutStyle"
                android:text="@string/basic_information" />

            <RelativeLayout
                style="@style/WhiteFixHeightLayoutStyle"
                android:onClick="selectDepartmentAction">

                <TextView
                    style="@style/DimTextStyle"
                    android:text="@string/department_with_colon" />

                <TextView
                    android:id="@+id/tvDepartment"
                    style="@style/WithArrowIconTextStyle"
                    android:textSize="@dimen/text_size_16"
                    tools:text="用新" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rltData"
                style="@style/WhiteFixHeightLayoutStyle"
                android:layout_marginTop="@dimen/margin_1"
                android:onClick="selectProjectAction">

                <TextView
                    style="@style/DimTextStyle"
                    android:text="@string/project_with_colon" />

                <TextView
                    android:id="@+id/tvProject"
                    style="@style/WithArrowIconTextStyle"
                    android:textSize="@dimen/text_size_16"
                    tools:text="永新" />
            </RelativeLayout>

            <RelativeLayout
                style="@style/WhiteFixHeightLayoutStyle"
                android:layout_marginTop="@dimen/margin_1"
                android:onClick="selectUserInfoAction">

                <TextView
                    style="@style/DimTextStyle"
                    android:text="@string/name_with_colon" />

                <TextView
                    android:id="@+id/tvName"
                    style="@style/WithArrowIconTextStyle"
                    android:textSize="@dimen/text_size_16"
                    tools:text="Eason Chan" />

            </RelativeLayout>

            <TextView
                style="@style/SingleTitleLayoutStyle"
                android:text="@string/man_hours_check" />

            <RelativeLayout
                style="@style/WhiteFixHeightLayoutStyle"
                android:onClick="selectAttendanceStatusAction">

                <TextView
                    style="@style/DimTextStyle"
                    android:text="@string/working_status_with_colon" />

                <TextView
                    android:id="@+id/tvAttendanceStatus"
                    style="@style/WithArrowIconTextStyle"
                    android:textSize="@dimen/text_size_16"
                    tools:text="@string/normal" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rltStartTime"
                style="@style/WhiteFixHeightLayoutStyle"
                android:layout_marginTop="@dimen/margin_1"
                android:onClick="selectDateAction">

                <TextView
                    style="@style/DimTextStyle"
                    android:text="@string/start_work_time" />

                <TextView
                    android:id="@+id/tvStartTime"
                    style="@style/WithArrowIconTextStyle"
                    android:textSize="@dimen/text_size_16"
                    tools:text="用新" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rltEndTime"
                style="@style/WhiteFixHeightLayoutStyle"
                android:layout_marginTop="@dimen/margin_1"
                android:onClick="selectDateAction">

                <TextView
                    style="@style/DimTextStyle"
                    android:text="@string/end_work_time" />

                <TextView
                    android:id="@+id/tvEndTime"
                    style="@style/WithArrowIconTextStyle"
                    android:textSize="@dimen/text_size_16"
                    tools:text="用新" />

            </RelativeLayout>

            <RelativeLayout
                style="@style/WhiteFixHeightLayoutStyle"
                android:layout_marginTop="@dimen/margin_1">

                <TextView
                    style="@style/DimTextStyle"
                    android:text="@string/man_hours" />

                <TextView
                    android:id="@+id/tvManHours"
                    style="@style/NormalTextStyle"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/tvManHoursUnit"
                    android:textColor="@color/color_f03232"
                    android:textSize="@dimen/text_size_16"
                    tools:text="8.5" />

                <TextView
                    android:id="@+id/tvManHoursUnit"
                    style="@style/WithArrowIconTextStyle"
                    android:text="h"
                    android:textSize="@dimen/text_size_16" />

            </RelativeLayout>

            <TextView
                style="@style/SingleTitleLayoutStyle"
                android:text="@string/overtime" />

            <RelativeLayout style="@style/WhiteFixHeightLayoutStyle">

                <TextView
                    style="@style/DimTextStyle"
                    android:text="@string/overtime_duration" />

                <com.mdground.hdenergy.views.ExtendedEditText
                    android:id="@+id/etOverTimeHour"
                    style="@style/EditTextStyle"
                    android:layout_width="@dimen/size_180"
                    android:gravity="center_vertical|right"
                    android:inputType="number"
                    android:layout_toLeftOf="@+id/tvOverTimeUnit"
                    android:selectAllOnFocus="true" />

                <TextView
                    android:id="@+id/tvOverTimeUnit"
                    style="@style/WithArrowIconTextStyle"
                    android:text="h"
                    android:textSize="@dimen/text_size_16" />

            </RelativeLayout>

            <RelativeLayout
                style="@style/WhiteFixHeightLayoutStyle"
                android:layout_marginTop="@dimen/margin_1">

                <TextView
                    android:id="@+id/tvOverTimeReason"
                    style="@style/DimTextStyle"
                    android:text="@string/overtime_reason" />

                <EditText
                    android:id="@+id/etOverTimeReason"
                    style="@style/WithArrowEdittextStyle"
                    android:layout_marginLeft="@dimen/margin_8"
                    android:layout_toRightOf="@+id/tvOverTimeReason" />

            </RelativeLayout>

            <TextView
                style="@style/SingleTitleLayoutStyle"
                android:text="@string/category" />

            <RelativeLayout
                android:id="@+id/rltCategory"
                style="@style/WhiteFixHeightLayoutStyle"
                android:onClick="selectCategoryAction">

                <TextView
                    style="@style/DimTextStyle"
                    android:text="@string/category_with_colon" />

                <TextView
                    android:id="@+id/tvCategory"
                    style="@style/WithArrowIconTextStyle"
                    android:textSize="@dimen/text_size_16"
                    tools:text="用新" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rltContent"
                style="@style/WhiteFixHeightLayoutStyle"
                android:layout_marginTop="@dimen/margin_1"
                android:onClick="selectContentAction">

                <TextView
                    style="@style/DimTextStyle"
                    android:text="@string/work_detail_with_colon" />

                <TextView
                    android:id="@+id/tvContent"
                    style="@style/WithArrowIconTextStyle"
                    android:textSize="@dimen/text_size_16"
                    tools:text="用新" />

            </RelativeLayout>

            <TextView
                style="@style/SingleTitleLayoutStyle"
                android:text="@string/business_trip" />

            <RelativeLayout style="@style/WhiteFixHeightLayoutStyle">

                <TextView
                    android:id="@+id/tvBusinessTripLocation"
                    style="@style/DimTextStyle"
                    android:text="@string/business_trip_location" />

                <EditText
                    android:id="@+id/etBusinessTripLocation"
                    style="@style/WithArrowEdittextStyle"
                    android:layout_marginLeft="@dimen/margin_8"
                    android:layout_toRightOf="@+id/tvBusinessTripLocation" />
            </RelativeLayout>

            <RelativeLayout
                style="@style/WhiteFixHeightLayoutStyle"
                android:layout_marginTop="@dimen/margin_1">

                <TextView
                    style="@style/DimTextStyle"
                    android:text="@string/transportation_fare" />

                <com.mdground.hdenergy.views.EdittextWithUnitIcon
                    android:id="@+id/etuiTransportationFare"
                    style="@style/WithArrowEdittextStyle"
                    app:unitResId="@string/yuan" />

            </RelativeLayout>

            <RelativeLayout
                style="@style/WhiteFixHeightLayoutStyle"
                android:layout_marginTop="@dimen/margin_1">

                <TextView
                    style="@style/DimTextStyle"
                    android:text="@string/transportation_time_consuming" />

                <com.mdground.hdenergy.views.EdittextWithUnitIcon
                    android:id="@+id/etuiTransportationTimeconsuming"
                    style="@style/WithArrowEdittextStyle"
                    app:unitResId="@string/hours" />

            </RelativeLayout>

            <RelativeLayout
                style="@style/WhiteFixHeightLayoutStyle"
                android:layout_marginTop="@dimen/margin_1">

                <TextView
                    style="@style/DimTextStyle"
                    android:text="@string/accommodation_fee" />

                <com.mdground.hdenergy.views.EdittextWithUnitIcon
                    android:id="@+id/etuiAccommodationFee"
                    style="@style/WithArrowEdittextStyle"
                    app:unitResId="@string/yuan" />

            </RelativeLayout>

            <TextView
                style="@style/SingleTitleLayoutStyle"
                android:text="@string/other_problem" />

            <EditText
                android:id="@+id/etOtherProblem"
                style="@style/LargeEdittextLayoutStyle"
                android:hint="@string/input_other_problem" />

            <TextView
                android:id="@+id/tvRateTitle"
                style="@style/SingleTitleLayoutStyle"
                android:text="@string/rate" />

            <RelativeLayout
                android:id="@+id/rltRate"
                style="@style/WhiteFixHeightLayoutStyle">

                <TextView
                    style="@style/DimTextStyle"
                    android:text="@string/rate_with_colon" />

                <EditText
                    android:id="@+id/etScore"
                    style="@style/WithArrowEdittextStyle"
                    android:layout_width="280dp"
                    android:gravity="right"
                    android:hint="@string/last_day_fill"
                    android:inputType="number" />

            </RelativeLayout>

            <Button
                android:id="@+id/btnNextStep"
                style="@style/NormalButtonStyle"
                android:layout_marginBottom="@dimen/margin_40"
                android:layout_marginTop="@dimen/margin_40"
                android:onClick="submitAction"
                android:text="@string/submit"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>
    </ScrollView>
</layout>